# btp

./: .gitignore  README.md  pyproject.toml
FairMOT/: requirements.txt
FairMOT/src/lib/tracker/: multitracker.py
action_classification/: ActionClassifier-ViT.ipynb  Action_Classifier.ipynb  action_classifier_vit.py  action_detect.py
bgSep/: .gitignore  README.md  algoTester.py  pyproject.toml
bgSep/bgsep/: algoTester.py  mask_filling.py
bgSep/tests/: test_bgsep.py
calibration/: calibration_data.npz  claude.py  undistort.py
calibration/calibration_results/: calibration_data.npz  camera_params.txt  fisheye_calibration_data.npz  fisheye_camera_params.txt  standard_calibration_data.npz  standard_camera_params.txt
calibration/z0/: camera-undistort.py
calibration/z0/calibration_results/: camera_calibration.npz  camera_params.txt
cctv/: calibration.ipynb  main.py
code_live_feed/: test.py
deepsort/: deepsort.py
docs/: Background Separation.md  Celery.md  Machine Learning System Design.md  Motion Detection.md  Robust Principle Component Analysis.md  _config.yml  index.md
docs/.obsidian/: app.json  community-plugins.json  core-plugins.json  graph.json  hotkeys.json  templates.json  workspace.json
docs/.obsidian/plugins/obsidian-languagetool-plugin/: data.json
docs/.obsidian/plugins/obsidian-minimal-settings/: data.json
docs/.obsidian/plugins/templater-obsidian/: data.json
docs/_layouts/: default.html
fairface/: predict.py
faiss_tracking/: main.py
glasses/: detect.py
hairlines/face_parsing/: detect.py  model.py
insight_face/: reidentification.py
mediapipe/: MediaPipe.py  requirements.txt
motion_detection/: detect.py
notes/.obsidian/: appearance.json  community-plugins.json  workspace.json
notes/_templates/: classNotes.md  courseMain.md  topicNotes.md
pipeline/: interface.py  main.py  tracker_config.json
pipeline/models/: camera.py  database.py  parsing.py  track.py  track2.py  tracking.py
pipeline/models/models/: tracker_yolo.yaml
tracking/: deepsort.py
yolo/: classify.py  trial.ipynb
