[project]
name = "btp"
version = "0.1.0"
description = "Machine Learning based Video Surveillance"
authors = ["Kugelblitz25 <vighneshnayak203@gmail.com>"]
requires-python = ">=3.10"

dependencies = [
    "opencv-contrib-python>=4.10.0",
    "matplotlib>=3.9.2",
    "ultralytics>=8.2.90",
    "deep-sort-realtime>=1.3.2",
    "scikit-learn>=1.5.2",
    "webcolors>=24.11.1",
    "mediapipe>=0.10.18",
    "psycopg2-binary>=2.9.10",
]
 
