[project]
name = "btp"
version = "0.1.0"
description = "Machine Learning based Video Surveillance"
authors = ["Kugelblitz25 <vighneshnayak203@gmail.com>"]
requires-python = ">=3.10"

dependencies = [
    "opencv-contrib-python>=4.10.0",
    "matplotlib>=3.9.2",
    "deep-sort-realtime>=1.3.2",
    "scikit-learn>=1.5.2",
    "webcolors>=24.11.1",
    "mediapipe>=0.10.18",
    "psycopg2-binary>=2.9.10",
    "realesrgan",
    "huggingface-hub==0.25.2",
    "fastapi>=0.115.12",
    "ultralytics>=8.3.108",
    "lap>=0.5.12",
    "deepface>=0.0.93",
    "glasses-detector>=0.1.1",
    "insightface>=0.7.3",
    "onnxruntime>=1.21.1",
    "keyboard>=0.13.5",
    "streamlit>=1.45.0",
    "httpx>=0.28.1",
    "plotly>=6.0.1",
    "isodate>=0.7.2",
]

[tool.uv.sources]
realesrgan = { git = "https://github.com/sberbank-ai/Real-ESRGAN.git" }
 
